src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_timestamp__cast_int32_to_mz_timestamp.snap
---
source: src/expr/src/scalar/func/impls/mz_timestamp.rs
expression: "#[sqlfunc(\n    sqlname = \"integer_to_mz_timestamp\",\n    preserves_uniqueness = true,\n    is_monotone = true\n)]\nfn cast_int32_to_mz_timestamp(a: i32) -> Result<Timestamp, EvalError> {\n    i64::from(a)\n        .try_into()\n        .map_err(|_| EvalError::MzTimestampOutOfRange(a.to_string().into()))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastInt32ToMzTimestamp;
impl crate::func::EagerUnaryFunc for CastInt32ToMzTimestamp {
    type Input<'a> = i32;
    type Output<'a> = Result<Timestamp, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_int32_to_mz_timestamp(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastInt32ToMzTimestamp {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("integer_to_mz_timestamp")
    }
}
fn cast_int32_to_mz_timestamp(a: i32) -> Result<Timestamp, EvalError> {
    i64::from(a)
        .try_into()
        .map_err(|_| EvalError::MzTimestampOutOfRange(a.to_string().into()))
}
