src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_timestamp__cast_mz_timestamp_to_string.snap
---
source: src/expr/src/scalar/func/impls/mz_timestamp.rs
expression: "#[sqlfunc(\n    sqlname = \"mz_timestamp_to_text\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastStringToMzTimestamp)\n)]\nfn cast_mz_timestamp_to_string(a: Timestamp) -> String {\n    let mut buf = String::new();\n    strconv::format_mz_timestamp(&mut buf, a);\n    buf\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastMzTimestampToString;
impl crate::func::EagerUnaryFunc for CastMzTimestampToString {
    type Input<'a> = Timestamp;
    type Output<'a> = String;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_mz_timestamp_to_string(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastStringToMzTimestamp)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastMzTimestampToString {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("mz_timestamp_to_text")
    }
}
fn cast_mz_timestamp_to_string(a: Timestamp) -> String {
    let mut buf = String::new();
    strconv::format_mz_timestamp(&mut buf, a);
    buf
}
